Updated README file.  Made significant changes to style2.css, content.php, and logic.php file on Thursday, 02Oct14, while working behind a firewall, so I did not push updates to GitHub near as much as I would have liked.  I did regularly save changes during the day in temp files on my local machine (psuedo- version control.)  I believe everything is working correctly, but I will retest once I post it out to Digital Ocean.

--- a/css/style2.css
+++ b/css/style2.css
@@ -35,7 +35,7 @@ img
 {
   display:block;
   margin:auto;
-  width:80%;
+  width:70%;
 }
 
 .wbdr
